# attend

./: .gitignore  README.md  Rocket.toml  class_data.json
actix-impl/: Cargo.toml
actix-impl/src/: main.rs
attend/: Cargo.toml
attend/src/: catchers.rs  helper.rs  main.rs  models.rs
attend/src/models/: attendance.rs  attendee.rs  class.rs  teacher.rs
attend/src/routes/: attendance.rs  index.rs  operations.rs  students.rs  tags.rs
attend/src/routes/operations/: logout.rs
attend_schedule_interpreter/: Cargo.toml
attend_schedule_interpreter/src/: main.rs
docs/: about.html  contact.html  fast.html  idea.html  index.html  order.html  secure.html  simple.html  sitemap.xml
docs/css/: main.css
docs/js/: main.js
frontend/: attendance.php  footer.php  index.php  login.php  logout.php  students.php  support.php  tags.php
frontend/js/: navigation_button.js
frontend/operations/: addAttendee.php  sendInquiry.php
hardware/design/: AttendAssemble.iam  AttendBottom.fpp  AttendBottom.ipt  AttendModel.fpp  AttendModel.gx  AttendTop.ipt
planning/: Attend.docx
rust/: .env  Cargo.toml  diesel.toml
rust/attend/: Cargo.toml
rust/planning/: Attend Avtal.docx  Attend.html
rust/templates/: error.html.tera  index.html.tera
sql/: down.sql  up.sql
static/css/: main.css
templates/: base.html.tera  index.html.tera  support.html.tera
templates/students/: student.html.tera
templates/tags/: tags.html.tera
weblang/css/: main.css
weblang/frontend/: classes.php  createAccount.php  navigation.php
weblang/operations/: connect.php  handleTag.php  (+1 more)
(+49 files in other folders)
